\name{NEWS}
\title{News for package `pomp'}
\section{Changes in \pkg{pomp} version 0.50-9}{
  \itemize{
    \item Fix bug in \code{compare.pmcmc}.
  }
}
\section{Changes in \pkg{pomp} version 0.50-8}{
  \itemize{
    \item Introduced new \code{compare.pmcmc} and \code{compare.abc} functions, comparable to \code{compare.mif}.
  }
}
\section{Changes in \pkg{pomp} version 0.50-6}{
  \itemize{
    \item The package manual and tutorials are no longer included with the package source.
    Instead, links are provided to the \pkg{pomp} website.
    \item The package help pages have been revisited for accuracy and completeness.
  }
}
\section{Changes in \pkg{pomp} version 0.50-1}{
  \itemize{
    \item \code{pomp} can now take snippets of C code directly as definitions of the various basic functions.
    This is accomplished through the use of a new "Csnippet" function.
    See the \sQuote{sir} demo for a demonstration.
    \item It is now possible to specify global variables and typedefs using the \code{globals} argument to \code{pompBuilder} and \code{pomp}.
    See the \sQuote{sir} demo for a demonstration.
    Thanks to Carl Pearson for the suggestion.
  }
}
\section{Changes in \pkg{pomp} version 0.49-1}{
  \itemize{
    \item A new method, \code{probe.match.objfun}, constructs objective functions suitable for use in optimizers.
    \item \code{pomp} now depends on \code{nloptr}, which provides a suite of optimization algorithms.
    This package can now be used in various methods for optimization of an objective function.
    \item New inline C functions \code{to_log_barycentric} and \code{from_log_barycentric} are provided in \file{pomp.h} to facilitate log-barycentric transformations.
    These have proven very useful in dealing with parameters constrained to sum to one (e.g., initial conditions of compartmental models).
    \item Bug fix in \code{periodic.bspline.basis}.